Added experimental support for Canon iP90, iP90v. Still need to check orientation of print (may need vertical dimension reversed).

--- a/NEWS
+++ b/NEWS
@@ -293,6 +293,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA i9100  (EXPERIMENTAL)
        Canon PIXMA i9900  (EXPERIMENTAL)
+       Canon PIXMA iP90   (EXPERIMENTAL)
+       Canon PIXMA iP90v  (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
