Removed separate driver for Canon i865, as it is same as i860. Added corresponding Japan model 865R.

--- a/NEWS
+++ b/NEWS
@@ -290,6 +290,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 560i   (EXPERIMENTAL)
        Canon PIXMA 850i   (EXPERIMENTAL)
        Canon PIXMA 860i   (EXPERIMENTAL)
+       Canon PIXMA 865R   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
@@ -431,6 +432,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        Canon PIXMA i560
        Canon PIXMA i860
+       Canon PIXMA i865
        Canon PIXMA iP4600
        Canon PIXMA iP4700
        Canon PIXMA iP4800
