Added inkjet Hagaki modes to Canon i9100 and i9900, and CD support to i9900. Added corresponding Japan models 9100i and 9900i.

--- a/NEWS
+++ b/NEWS
@@ -296,6 +296,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 960i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
+       Canon PIXMA 9100i  (EXPERIMENTAL)
+       Canon PIXMA 9900i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i450   (EXPERIMENTAL)
        Canon PIXMA i450X  (EXPERIMENTAL)
